# vector-graph-rag

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/: __init__.py  main.py  schemas.py
docs/: evaluation.md  getting-started.md  how-it-works.md  index.md  use-cases.md
evaluation/: README.md  evaluate.py  index.html
evaluation/data/: openie_test_sample_results_ner_gpt-3.5-turbo-1106_20.json  test_sample.json  test_sample_corpus.json
evaluation/data/ner_cache/: hotpotqa_train_queries.named_entity_output.tsv  sample_queries.named_entity_output.tsv
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  queries.ts
frontend/src/components/graph/: EntityNode.tsx  GraphCanvas.tsx  GraphLegend.tsx  RelationEdge.tsx  index.ts
frontend/src/components/import/: CreateGraphDialog.tsx  FileUploader.tsx  GraphSelector.tsx  GraphStatsPreview.tsx  ImportDialog.tsx  ImportProgress.tsx  ImportSettings.tsx  UrlInput.tsx
frontend/src/components/panels/: AnswerPanel.tsx  NodeDetailPanel.tsx  index.ts
frontend/src/components/search/: SearchInput.tsx
frontend/src/components/settings/: SettingsDialog.tsx
frontend/src/components/timeline/: ProcessTimeline.tsx  index.ts
frontend/src/components/ui/: Header.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  switch.tsx  tabs.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/stores/: datasetStore.ts  graphStore.ts  searchStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: graphLayout.ts
getting-started/: index.html
how-it-works/: index.html
search/: search_index.json
src/vector_graph_rag/: __init__.py  cli.py  config.py  models.py  rag.py
src/vector_graph_rag/api/: __init__.py  app.py
src/vector_graph_rag/graph/: __init__.py  builder.py  graph.py  knowledge_graph.py  retriever.py
src/vector_graph_rag/llm/: __init__.py  cache.py  extractor.py  reranker.py
src/vector_graph_rag/loaders/: __init__.py  chunker.py  converter.py  url_fetcher.py
src/vector_graph_rag/storage/: __init__.py  embeddings.py  milvus.py
tests/: __init__.py  conftest.py  test_api.py  test_graph.py  test_milvus_store.py
use-cases/: index.html
