[project]
name = "vector-graph-rag"
version = "0.1.0"
description = "A Graph RAG implementation using pure vector search with Milvus"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Vector Graph RAG Team" }
]
keywords = ["rag", "graph-rag", "milvus", "vector-search", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pymilvus>=2.4.0",
    "milvus-lite>=2.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tqdm>=4.65.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "langchain-openai>=1.1.7",
    "langchain-core>=1.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
all = [
    "vector-graph-rag[dev,api]",
]

[project.scripts]
vector-graph-rag = "vector_graph_rag.cli:main"

[project.urls]
Homepage = "https://github.com/zilliztech/vector-graph-rag"
Documentation = "https://github.com/zilliztech/vector-graph-rag#readme"
Repository = "https://github.com/zilliztech/vector-graph-rag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_graph_rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
